apps/k8s/base/web/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: web
